fixed #16648: dashboard contrast issues

--- a/netbox/project-static/styles/overrides/_tabler.scss
+++ b/netbox/project-static/styles/overrides/_tabler.scss
@@ -66,6 +66,19 @@ table th.orderable a {
   background: var(--tblr-bg-surface-secondary)!important;
 }
 
+// Altering dashboard card colors
+.grid-stack {
+  .card-header {
+    // Default color of card header changes depending on theme
+    &.bg-default {
+      background: var(--tblr-bg-surface-secondary)!important;
+    }
+    a {
+      color: inherit!important;
+    }
+  }
+}
+
 .footer .text-primary {
   color: $rich-black!important;
 }
